# XdevLSDK

./: .gitignore  CMakeLists.txt  README.md  Version.md  Version.txt
XdevL/: CMakeLists.txt
XdevL/include/: XdevL.h  XdevLApplication.h  XdevLArrayModifier.h  XdevLClassifier.h  XdevLCommandLine.h  XdevLConditionalVariable.h  XdevLCore.h  XdevLCoreMediator.h  XdevLDelegate.h  XdevLDynLib.h  XdevLError.h  XdevLEvent.h  XdevLID.h  XdevLInputSystem.h  XdevLInputSystemUtils.h  XdevLListener.h  XdevLLog.h  XdevLManagedBuffer.h  XdevLModule.h  XdevLMutex.h  XdevLPlatform.h  XdevLPlugin.h  XdevLPluginImpl.h  XdevLProfiler.h  XdevLRingBuffer.h  XdevLSemaphore.h  XdevLSharedMemory.h  XdevLSignalSlot.h  XdevLStream.h  XdevLThread.h  XdevLTimer.h  XdevLTypes.h  XdevLUserData.h  XdevLUtils.h  XdevLVersion.h  XdevLXfstring.h  XdevLXstring.h  tinydir.h  tinydir_entity.h
XdevL/src/: XdevL.cpp  XdevLConditionalVariable.cpp  XdevLDynLib.cpp  XdevLLog.cpp  XdevLMutex.cpp  XdevLProfiler.cpp  XdevLThread.cpp  XdevLTimer.cpp  XdevLUtils.cpp  tinydir.cpp  tinydir_entity.cpp
XdevL/src/Unix/: XdevLConditionalVariableUnix.cpp  XdevLDynLibUnix.cpp  XdevLMutexUnix.cpp  XdevLSemaphoreUnix.cpp  XdevLSharedMemoryUnix.cpp  XdevLThreadUnix.cpp  XdevLTimerUnix.cpp
XdevL/src/Windows/: XdevLConditionalVariableWindows.cpp  XdevLDynLibWindows.cpp  XdevLMutexWindows.cpp  XdevLThreadWindows.cpp  XdevLTimerWindows.cpp
XdevLDemos/: CMakeLists.txt  XdevLDemosMacOSX.workspace  XdevLDemosUnix.workspace  XdevLDemosWin.workspace
XdevLDemos/audio_capture_demo/: audio_capture_demo.cpp  audio_capture_demo.project
XdevLDemos/audio_demo/: CMakeLists.txt  audio_demo.cpp  audio_demo.project
XdevLDemos/audio_synthesizer_demo/: audio_synthesizer_demo.cpp  audio_synthesizer_demo.project
XdevLDemos/bluetooth_demo/: bluetooth_demo.cpp  ring_buffer.h
XdevLDemos/compute_device_demo/: compute_device_demo.cpp  compute_device_demo.project
XdevLDemos/devices_demo/: devices_demo.cpp  devices_demo.project
XdevLDemos/events_demo/: events_demo.cpp  events_demo.project
XdevLDemos/filesystem_demo/: filesystem_demo.cpp  filesystem_demo.project
XdevLDemos/glsl_demo/: CMakeLists.txt  frameBuffer_fs.glsl  fs1.fs  glsl_demo.cpp  glsl_demo.project  glsl_demo.xml  gs1.gs  vs1.vs
XdevLDemos/joystick_demo/: joystick_demo.cpp  joystick_demo.project
XdevLDemos/mouse_demo/: mouse_demo.cpp  mouse_demo.project
XdevLDemos/network_client_demo/: network_client_demo.cpp  network_client_demo.project
XdevLDemos/network_server_demo/: network_server_demo.cpp  network_server_demo.project
XdevLDemos/ogre_demo/: CMakeLists.txt  ogre_demo.cpp  ogre_demo.project
XdevLDemos/opengl_demo/: opengl_demo.cpp  opengl_demo.project
XdevLDemos/rai_demo/: CMakeLists.txt  rai_demo.cpp  rai_demo.project
XdevLDemos/serial_demo/: serial_demo.cpp  serial_demo.project
XdevLDemos/tcp_client_demo/: CMakeLists.txt  tcp_client_demo.cpp  tcp_client_demo.project
XdevLDemos/tcp_server_demo/: tcp_server_demo.cpp  tcp_server_demo.project
XdevLDemos/udp_client_array_demo/: udp_client_array_demo.cpp  udp_client_array_demo.project
XdevLDemos/udp_client_demo/: udp_client_demo.cpp  udp_client_demo.project
XdevLDemos/udp_server_array_demo/: udp_server_array_demo.cpp  udp_server_array_demo.project
XdevLDemos/udp_server_demo/: udp_server_demo.cpp  udp_server_demo.project
XdevLDemos/video_demo/: video_demo.cpp  video_demo.project
XdevLDemos/xml_demo/: xml_demo.cpp  xml_demo.project
XdevLPlugins/XdevLAudio/: CMakeLists.txt  XdevLAudio.h  XdevLAudioAL.cpp  XdevLAudioAL.h  XdevLAudioBuffer.h  XdevLAudioSource.h
XdevLPlugins/XdevLAudio/XdevLAudioAlsa/: CMakeLists.txt  XdevLAudioAlsaImpl.cpp  XdevLAudioAlsaImpl.h
XdevLPlugins/XdevLAudio/XdevLAudioCoreAudio/: CMakeLists.txt  XdevLAudioCoreAudio.cpp  XdevLAudioCoreAudio.h
XdevLPlugins/XdevLAudio/XdevLAudioOpenAL/: CMakeLists.txt  XdevLAudioAL.cpp  XdevLAudioAL.h  XdevLAudioBufferAL.h  (+3 more)
XdevLPlugins/XdevLBlankPlugin/: CMakeLists.txt  XdevLBlank.h  XdevLBlankImpl.cpp  XdevLBlankImpl.h  XdevLBlankImplPlugin.cpp
XdevLPlugins/XdevLBluetooth/: CMakeLists.txt  WinBluetoothWrapper.h  XdevLBluetooth.h  XdevLBluetoothLinuxImpl.cpp  XdevLBluetoothLinuxImpl.h  XdevLBluetoothMacOSXImpl.cpp  XdevLBluetoothMacOSXImpl.h  XdevLBluetoothWinImpl.cpp  XdevLBluetoothWinImpl.h
XdevLPlugins/XdevLCore/: CMakeLists.txt  XdevLCoreImpl.cpp  XdevLCoreImpl.h  XdevLEventQueueBuffer.cpp  XdevLEventQueueBuffer.h
XdevLPlugins/XdevLFTDI/: CMakeLists.txt  XdevLFTDI.cpp  XdevLFTDI.h
XdevLPlugins/XdevLFileSystem/: CMakeLists.txt  XdevLFileSystem.h
XdevLPlugins/XdevLFont/: CMakeLists.txt  XdevLFont.h  XdevLFontImpl.cpp  XdevLFontImpl.h  XdevLFontSystem.h  XdevLFontSystemImpl.cpp  XdevLFontSystemImpl.h  XdevLTextLayout.h  XdevLTextLayoutImpl.cpp  XdevLTextLayoutImpl.h
XdevLPlugins/XdevLKeyboard/: CMakeLists.txt  XdevLKeyboard.h  XdevLKeyboardImpl.cpp  XdevLKeyboardImpl.h
XdevLPlugins/XdevLMouse/: CMakeLists.txt  XdevLMouseImpl.cpp  XdevLMouseImpl.h
XdevLPlugins/XdevLNetwork/: CMakeLists.txt  XdevLSocket.h  XdevLSocketImpl.cpp  XdevLSocketImpl.h
XdevLPlugins/XdevLOgre/: CMakeLists.txt  XdevLOgre.h  XdevLOgreImpl.cpp  XdevLOgreImpl.h
XdevLPlugins/XdevLOpenGL/: CMakeLists.txt  XdevLFrameBuffer.h  XdevLFrameBufferImpl.cpp  XdevLFrameBufferImpl.h  XdevLIndexBuffer.h  XdevLIndexBufferImpl.h  XdevLOpenGL.h  XdevLOpenGLGLX.cpp  XdevLOpenGLGLX.h  XdevLOpenGLImpl.cpp  XdevLOpenGLImpl.h  XdevLOpenGLSDL.cpp  XdevLOpenGLSDL.h  XdevLOpenGLUtils.cpp  XdevLOpenGLWGL.cpp  XdevLOpenGLWGL.h  XdevLShader.h  XdevLShaderImpl.h  XdevLShaderProgram.h  XdevLShaderProgramImpl.cpp  XdevLShaderProgramImpl.h  XdevLStreamBuffer.h  XdevLTexture.h  XdevLTextureCube.h  XdevLTextureCubeImpl.h  XdevLVertexArray.h  XdevLVertexArrayImpl.cpp  XdevLVertexBuffer.h  XdevLVertexBufferImpl.h  XdevLVertexDeclaration.h
XdevLPlugins/XdevLSerial/: CMakeLists.txt  XdevLSerial.h  XdevLSerialImpl.h  XdevLSerialLinux.cpp  XdevLSerialLinux.h  XdevLSerialMacOSX.cpp  XdevLSerialMacOSX.h  XdevLSerialWin.cpp  XdevLSerialWin.h
XdevLUtils/XdevLBT/: CMakeLists.txt  XdevLBT.cpp
(+218 files in other folders)
